--- a/sprin1/style/_footer.scss
+++ b/sprin1/style/_footer.scss
@@ -1,14 +1,19 @@
 footer{
-    height: calc(100% - 95px);
     grid-area: _footer;
-    margin-bottom: 31px;
-    
-    p{
+    p{ 
+        font-family: 'IBM Plex Mono', monospace,sans-serif;
+        font-size: 14px;
+        color: #060A24;
+        letter-spacing: 0;
+        line-height: 22px;
+
         width: 227px;
         height: 22px;
-        margin: 24px 46px 16px 47px;
+        margin: 0 46px 16px 47px;
+        
     }
     ul {
+        margin-bottom: 31px;
         list-style: none;
         width: 100%;
         height: 28px;
