--- a/sprin1/style/_general_rules.scss
+++ b/sprin1/style/_general_rules.scss
@@ -11,7 +11,7 @@
     grid-template-areas:"_header"
                         "_main"
                         "_footer";
-    grid-template-columns: 100%;
+    grid-template-columns: auto;
     grid-auto-rows: auto;
     background-color: $back_ground_color;
 }
