--- a/sprin1/style/_main.scss
+++ b/sprin1/style/_main.scss
@@ -89,16 +89,22 @@ main{
         
         grid-area: episodios;
         width: 100%;
-        height: 1203.5px;
+        height: 100%;
+        overflow: hidden;
         display: flex;
         flex-flow: row wrap;
+
+        align-items: center;
+        justify-content: center;
         div{
             width: 100%;
         }
         article{
             width: 100%;
+            height: auto;
             transform: skewY(6deg);
             transform-origin: top right;
+            
         }
         
         
@@ -130,22 +136,17 @@ main{
             transform: none;
             transform-origin: none;
         }
-        .embed-container {
-            position: relative;
-            padding-bottom: 73%;
-            height: 0;
+        iframe{
+            border: none;
+            width: 100.82%;
+            max-width: 584px;
+            min-height: 231px;
             
         }
-        .embed-container iframe {
-            border: none;
-            border-radius: 5px;
-            position: absolute;
-            top:0;
-            left: 0;
-            width: 101%;
-            height: 100%;
-        
+        .padding_Phone{
+            margin-bottom: 143.5px ;
         }
+        
 
     }
     
@@ -213,6 +214,9 @@ main{
 
         }
         div{
+            display: flex;
+            flex-flow: row wrap;
+            justify-content: center;
             width: 100%;
             height:243px;
             img{
@@ -231,6 +235,13 @@ main{
         flex-flow: row wrap;
         position: relative;
         top: -95.5px;
+        
+        article:first-child div{
+            display: flex;
+            flex-flow: row wrap;
+            justify-content: center;
+        }
+        
         article{
             display: flex;
             flex-flow: row wrap;
