--- a/sprin1/style/_mediasQ.scss
+++ b/sprin1/style/_mediasQ.scss
@@ -1,34 +1,302 @@
 
+    @media screen  and (min-width: 1000px ) {
+        
+        header{
+            height: 80px;
+            
+            img{
+                width: 36px;
+                height: 36px;
+                margin: 22px 0 22px 100px;
+            }
+            /*Se elemininan aspectos visualles del menu amburgesa*/
+            nav .menu  ul li:hover {
+            background: unset;
+            border-bottom: 2px solid black;
+            } 
+            nav .menu ul li a {
+                padding: unset;
+                line-height: unset;
+            }
+            nav .menu  ul li a:hover {
+                color: unset;
+            } 
+            nav .menu input {
+                display: none;
+            }
+            nav .menu span {
+                display: none;
+            }
+
+            nav .menu_pc{
+
+                background-color: unset;
+                color: black;
+                display: flex;
+                justify-content:flex-end;
+                width: 68px;
+                height: 26px;
+                padding-right: 20px;
+                list-style: none;
+                text-transform: capitalize;
+
+            }
+        }
+        main{
+            /* *********************************************        Seccion Episodios   ****************************************************** */
+            .episodios .movile{
+                display: none;
+            }
+            
+            .episodios article{
+                width:100%;
+                display: grid;
+                grid-template-areas:"Pod_title Pod_title"
+                                    "Pod1 Pod2" 
+                                    "Pod3 Pod4";
+                
+            }
+            .episodios article .pc{
+                display: unset;
+                max-width: 584px;
+                min-height: 232px;
+            }
+            
+            .Pod_title{
+                grid-area: Pod_title;
+                width: 209px;
+                height: 62px;
+                font-size: 48px;
+                color: #FFFFFF;
+                letter-spacing: 0;
+                margin: 186px 0 0 200px ;
+                
+                
+            }
+            .pc.Pod1{
+                grid-area: Pod1;
+                margin:26px 72px 72px 100px;
+                
+            }
+            .pc.Pod2{
+                grid-area: Pod2;
+                margin:26px 100px 0 0;
+            }
+            .pc.Pod3{
+                grid-area: Pod3;
+                margin:0 72px 84px 100px;
+            }
+            .pc.Pod4{
+                grid-area: Pod4;
+                margin:0 100px 84px 0;
+            }
+
+            /* *********************************************        Seccion nosotros   ****************************************************** */
+            .nosotros{
+                top:-68.5px;
+            }
+
+            .nosotros article div.phone_over{
+                    overflow:unset;
+                    width: 100%;
+            }
+            .nosotros article{
+                display: flex;
+                flex-flow: row nowrap;
+                
+            }
+
+            .nosotros article .phone_over img{
+                    
+                min-width: 457.6px;
+                height: 660px;
+                margin: 0 62.4px 64px 200px; 
+            }
+
+            .nosotros article div{
+                width: 100%;
+                height: 100%;
+
+                
+               
+            }
+            .nosotros article div h2{
+                width: 399px;
+                height: 62px;
+                margin: 189px 321px 24px 0;
+                font-size: 48px;
+                color: #060A24;
+                letter-spacing: 0;
+            }
+            .nosotros article div p{
+                width: 464px;
+                height: 204px;
+                margin: 0 256px 0 0;
+                font-size: 16px;
+                color: #060A24;
+                letter-spacing: 0;
+                line-height: 24px;
+            }
+
+            /* *********************************************        Seccion entrevistas     ******************************************** */
+            .entrevistas{
+                width: 100%;
+                height: auto;
+            }
+            .entrevistas  article h2{
+                grid-area: h2;
+                width: 481px;
+                height: 62px;
+                margin: 64px 0 36px 200px;
+                font-size: 48px;
+                color: #060A24;
+                letter-spacing: 0;
+            }
+            .entrevistas  article{
+                display: grid;
+                grid-template-areas:"h2 h2 h2"
+                                    "div div div"
+                                    "div div div";
+                grid-template-columns: 480px 480px 480px;
+                grid-template-rows: 162px 364px 364px;
+            }
+            .entrevistas article div img{
+                grid-area: div;
+                width: 480px;
+                min-height:364px;
+            }
+
+            /* *********************************************        Seccion topicos   ****************************************************** */
+            section.topicos article:first-child div{
+                width: 100%;
+                display: grid;
+                grid-template-areas: "img1 img2 img3 img4"
+                                     "P_1 P_2 P_3 P_4";
+
+                flex-flow: column nowrap;
+            }
+            .topicos article div img{
+                margin: 0 156px 29px 0;
+            }
+            .topicos article div p{
+                margin: 0 40px 66px 0;
+                width: 220px;
+                height: 32px;
+            }
+            
+            .topicos article div .img1{
+                grid-area:img1;
+                margin-left: 278px;
+            }
+            .topicos article div .P_1{
+                
+                grid-area: P_1;
+                height: 64px;
+                margin-left: 220px;
+            }
+            .topicos article div .img2{
+                grid-area:img2;
+            }
+            .topicos article div .P_2{
+                grid-area:P_2;
+                margin-bottom: 34px;
+            }
+            .topicos article div .img3{
+                grid-area:img3;
+            }
+            .topicos article div .P_3{
+                grid-area:P_3;
+                
+            }
+            .topicos article div .img4{
+                grid-area:img4;
+                margin-right:  278px;
+            }
+            .topicos article div .P_4{
+                grid-area:P_4;
+                height: 64px;
+                margin-right:  220px;
+                margin-bottom: 34px;
+            }
+            .topicos article h2{
+                width: 100%;
+                height: 62px;
+                margin: 64px 0 69px 200px;
+                font-size: 48px;
+                color: #060A24;
+                letter-spacing: 0;
+            }
+           /* *********************************************     Seccion topicos ==> Novedades   ******************************************* */
+            section article.novedades{
+                min-height: 518px;
+            
+            }
+            section article.novedades div.oblicuo h2{
+                transform-origin: top right;
+                font-size: 48px;
+                color: #FFFFFF;
+                letter-spacing: 0;
+                text-align: center;
+                width: 692px;
+                height: 62px;
+                margin: 213px 374px 36px 374px;
+            
+            }
+            section article.novedades div.oblicuo div{
+                width: 345px;
+                height: 56px;
+                margin: 0 548px 151px 547px;
+            }
+
+        }
+
+
+
+        footer{
+            section{
+                width: 100%;
+                display: flex;
+                flex-flow: row nowrap;
+            }
+            section p{
+                font-size: 16px;
+                color: #060A24;
+                letter-spacing: 0;
+                line-height: 28px;
+
+                width: 269px;
+                height: 28px;
+                margin:0 0 31px 100px;
+            }
+            section ul{
+                margin: unset;
+                justify-content: flex-end;
+            }
+        
+            
+            section ul li{
+                margin: 36px 36px 31px 0;
+                
+            }
+            section ul li:last-child{
+                margin: 36px 100px 31px 0;
+                
+            }
+            section ul li a i{
+                width: 18px;
+                height: 28px;
+                
+            }
+        }  
+    }
+
+
+/*
 header{
      @media screen and (min-width:500px) {
 
-        flex-flow: row wrap;
-        width: 100%;
-        height: 80px;
 
-        .menu_movil{
-            display: none;
-        }
-        
-        .menu{
-            
-            display: flex;
-            justify-content:flex-end;
-            width: 68px;
-            height: 26px;
-            list-style: none;
-            text-transform: capitalize;
-
-        }
-
-        img{
-        
-            width: 36px;
-            height: 36px;
-            margin: 22px 0 0 100px;
-        }
-
-        /* Amburgueza */
+        /* Amburgueza *//*
         nav .menu ul {
             position: relative;
             top: 0;
@@ -39,7 +307,6 @@ header{
         }
         nav .menu  ul li {
             padding: 5px 10px;
-            display: inline-block;
         } 
         nav .menu  ul li:hover {
             background: unset;
@@ -60,4 +327,6 @@ header{
         }
     }
 }
+
+*/
     
