--- a/sprin1/style/style.css
+++ b/sprin1/style/style.css
@@ -12,8 +12,8 @@
   display: -ms-grid;
   display: grid;
       grid-template-areas: "_header" "_main" "_footer";
-  -ms-grid-columns: 100%;
-      grid-template-columns: 100%;
+  -ms-grid-columns: auto;
+      grid-template-columns: auto;
   grid-auto-rows: auto;
   background-color: #FFFFFF;
 }
@@ -274,7 +274,8 @@ main .episodios {
   -ms-grid-column: 1;
   grid-area: episodios;
   width: 100%;
-  height: 1203.5px;
+  height: 100%;
+  overflow: hidden;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -282,6 +283,12 @@ main .episodios {
   -webkit-box-direction: normal;
       -ms-flex-flow: row wrap;
           flex-flow: row wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 main .episodios div {
@@ -290,6 +297,7 @@ main .episodios div {
 
 main .episodios article {
   width: 100%;
+  height: auto;
   -webkit-transform: skewY(6deg);
           transform: skewY(6deg);
   -webkit-transform-origin: top right;
@@ -336,20 +344,15 @@ main .episodios .movile {
           transform-origin: none;
 }
 
-main .episodios .embed-container {
-  position: relative;
-  padding-bottom: 73%;
-  height: 0;
+main .episodios iframe {
+  border: none;
+  width: 100.82%;
+  max-width: 584px;
+  min-height: 231px;
 }
 
-main .episodios .embed-container iframe {
-  border: none;
-  border-radius: 5px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 101%;
-  height: 100%;
+main .episodios .padding_Phone {
+  margin-bottom: 143.5px;
 }
 
 main .nosotros {
@@ -432,6 +435,16 @@ main .entrevistas h2 {
 }
 
 main .entrevistas div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   width: 100%;
   height: 243px;
 }
@@ -454,6 +467,19 @@ main .topicos {
           flex-flow: row wrap;
   position: relative;
   top: -95.5px;
+}
+
+main .topicos article:first-child div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 main .topicos article {
@@ -539,20 +565,24 @@ main .topicos .novedades div .btn {
 }
 
 footer {
-  height: calc(100% - 95px);
   -ms-grid-row: 3;
   -ms-grid-column: 1;
   grid-area: _footer;
-  margin-bottom: 31px;
 }
 
 footer p {
+  font-family: 'IBM Plex Mono', monospace,sans-serif;
+  font-size: 14px;
+  color: #060A24;
+  letter-spacing: 0;
+  line-height: 22px;
   width: 227px;
   height: 22px;
-  margin: 24px 46px 16px 47px;
+  margin: 0 46px 16px 47px;
 }
 
 footer ul {
+  margin-bottom: 31px;
   list-style: none;
   width: 100%;
   height: 28px;
@@ -567,47 +597,15 @@ footer ul {
       justify-content: space-around;
 }
 
-@media screen and (min-width: 500px) {
+@media screen and (min-width: 1000px) {
   header {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-flow: row wrap;
-            flex-flow: row wrap;
-    width: 100%;
     height: 80px;
-    /* Amburgueza */
-  }
-  header .menu_movil {
-    display: none;
-  }
-  header .menu {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: end;
-        -ms-flex-pack: end;
-            justify-content: flex-end;
-    width: 68px;
-    height: 26px;
-    list-style: none;
-    text-transform: capitalize;
+    /*Se elemininan aspectos visualles del menu amburgesa*/
   }
   header img {
     width: 36px;
     height: 36px;
-    margin: 22px 0 0 100px;
-  }
-  header nav .menu ul {
-    position: relative;
-    top: 0;
-    right: 0;
-    overflow: hidden;
-    background: unset;
-    height: unset;
-  }
-  header nav .menu ul li {
-    padding: 5px 10px;
-    display: inline-block;
+    margin: 22px 0 22px 100px;
   }
   header nav .menu ul li:hover {
     background: unset;
@@ -626,5 +624,321 @@ footer ul {
   header nav .menu span {
     display: none;
   }
+  header nav .menu_pc {
+    background-color: unset;
+    color: black;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+    width: 68px;
+    height: 26px;
+    padding-right: 20px;
+    list-style: none;
+    text-transform: capitalize;
+  }
+  main {
+    /* *********************************************        Seccion Episodios   ****************************************************** */
+    /* *********************************************        Seccion nosotros   ****************************************************** */
+    /* *********************************************        Seccion entrevistas     ******************************************** */
+    /* *********************************************        Seccion topicos   ****************************************************** */
+    /* *********************************************     Seccion topicos ==> Novedades   ******************************************* */
+  }
+  main .episodios .movile {
+    display: none;
+  }
+  main .episodios article {
+    width: 100%;
+    display: -ms-grid;
+    display: grid;
+        grid-template-areas: "Pod_title Pod_title" "Pod1 Pod2"  "Pod3 Pod4";
+  }
+  main .episodios article .pc {
+    display: unset;
+    max-width: 584px;
+    min-height: 232px;
+  }
+  main .Pod_title {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-area: Pod_title;
+    width: 209px;
+    height: 62px;
+    font-size: 48px;
+    color: #FFFFFF;
+    letter-spacing: 0;
+    margin: 186px 0 0 200px;
+  }
+  main .pc.Pod1 {
+    -ms-grid-row: 2;
+    -ms-grid-column: 1;
+    grid-area: Pod1;
+    margin: 26px 72px 72px 100px;
+  }
+  main .pc.Pod2 {
+    -ms-grid-row: 2;
+    -ms-grid-column: 2;
+    grid-area: Pod2;
+    margin: 26px 100px 0 0;
+  }
+  main .pc.Pod3 {
+    -ms-grid-row: 3;
+    -ms-grid-column: 1;
+    grid-area: Pod3;
+    margin: 0 72px 84px 100px;
+  }
+  main .pc.Pod4 {
+    -ms-grid-row: 3;
+    -ms-grid-column: 2;
+    grid-area: Pod4;
+    margin: 0 100px 84px 0;
+  }
+  main .nosotros {
+    top: -68.5px;
+  }
+  main .nosotros article div.phone_over {
+    overflow: unset;
+    width: 100%;
+  }
+  main .nosotros article {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row nowrap;
+            flex-flow: row nowrap;
+  }
+  main .nosotros article .phone_over img {
+    min-width: 457.6px;
+    height: 660px;
+    margin: 0 62.4px 64px 200px;
+  }
+  main .nosotros article div {
+    width: 100%;
+    height: 100%;
+  }
+  main .nosotros article div h2 {
+    width: 399px;
+    height: 62px;
+    margin: 189px 321px 24px 0;
+    font-size: 48px;
+    color: #060A24;
+    letter-spacing: 0;
+  }
+  main .nosotros article div p {
+    width: 464px;
+    height: 204px;
+    margin: 0 256px 0 0;
+    font-size: 16px;
+    color: #060A24;
+    letter-spacing: 0;
+    line-height: 24px;
+  }
+  main .entrevistas {
+    width: 100%;
+    height: auto;
+  }
+  main .entrevistas article h2 {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 3;
+    grid-area: h2;
+    width: 481px;
+    height: 62px;
+    margin: 64px 0 36px 200px;
+    font-size: 48px;
+    color: #060A24;
+    letter-spacing: 0;
+  }
+  main .entrevistas article {
+    display: -ms-grid;
+    display: grid;
+        grid-template-areas: "h2 h2 h2" "div div div" "div div div";
+    -ms-grid-columns: 480px 480px 480px;
+        grid-template-columns: 480px 480px 480px;
+    -ms-grid-rows: 162px 364px 364px;
+        grid-template-rows: 162px 364px 364px;
+  }
+  main .entrevistas article div img {
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 2;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 3;
+    grid-area: div;
+    width: 480px;
+    min-height: 364px;
+  }
+  main section.topicos article:first-child div {
+    width: 100%;
+    display: -ms-grid;
+    display: grid;
+        grid-template-areas: "img1 img2 img3 img4" "P_1 P_2 P_3 P_4";
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column nowrap;
+            flex-flow: column nowrap;
+  }
+  main .topicos article div img {
+    margin: 0 156px 29px 0;
+  }
+  main .topicos article div p {
+    margin: 0 40px 66px 0;
+    width: 220px;
+    height: 32px;
+  }
+  main .topicos article div .img1 {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+    grid-area: img1;
+    margin-left: 278px;
+  }
+  main .topicos article div .P_1 {
+    -ms-grid-row: 2;
+    -ms-grid-column: 1;
+    grid-area: P_1;
+    height: 64px;
+    margin-left: 220px;
+  }
+  main .topicos article div .img2 {
+    -ms-grid-row: 1;
+    -ms-grid-column: 2;
+    grid-area: img2;
+  }
+  main .topicos article div .P_2 {
+    -ms-grid-row: 2;
+    -ms-grid-column: 2;
+    grid-area: P_2;
+    margin-bottom: 34px;
+  }
+  main .topicos article div .img3 {
+    -ms-grid-row: 1;
+    -ms-grid-column: 3;
+    grid-area: img3;
+  }
+  main .topicos article div .P_3 {
+    -ms-grid-row: 2;
+    -ms-grid-column: 3;
+    grid-area: P_3;
+  }
+  main .topicos article div .img4 {
+    -ms-grid-row: 1;
+    -ms-grid-column: 4;
+    grid-area: img4;
+    margin-right: 278px;
+  }
+  main .topicos article div .P_4 {
+    -ms-grid-row: 2;
+    -ms-grid-column: 4;
+    grid-area: P_4;
+    height: 64px;
+    margin-right: 220px;
+    margin-bottom: 34px;
+  }
+  main .topicos article h2 {
+    width: 100%;
+    height: 62px;
+    margin: 64px 0 69px 200px;
+    font-size: 48px;
+    color: #060A24;
+    letter-spacing: 0;
+  }
+  main section article.novedades {
+    min-height: 518px;
+  }
+  main section article.novedades div.oblicuo h2 {
+    -webkit-transform-origin: top right;
+            transform-origin: top right;
+    font-size: 48px;
+    color: #FFFFFF;
+    letter-spacing: 0;
+    text-align: center;
+    width: 692px;
+    height: 62px;
+    margin: 213px 374px 36px 374px;
+  }
+  main section article.novedades div.oblicuo div {
+    width: 345px;
+    height: 56px;
+    margin: 0 548px 151px 547px;
+  }
+  footer section {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row nowrap;
+            flex-flow: row nowrap;
+  }
+  footer section p {
+    font-size: 16px;
+    color: #060A24;
+    letter-spacing: 0;
+    line-height: 28px;
+    width: 269px;
+    height: 28px;
+    margin: 0 0 31px 100px;
+  }
+  footer section ul {
+    margin: unset;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+  }
+  footer section ul li {
+    margin: 36px 36px 31px 0;
+  }
+  footer section ul li:last-child {
+    margin: 36px 100px 31px 0;
+  }
+  footer section ul li a i {
+    width: 18px;
+    height: 28px;
+  }
 }
+
+/*
+header{
+     @media screen and (min-width:500px) {
+
+
+        /* Amburgueza */
+/*
+        nav .menu ul {
+            position: relative;
+            top: 0;
+            right: 0;
+            overflow: hidden;
+            background: unset;
+            height: unset;
+        }
+        nav .menu  ul li {
+            padding: 5px 10px;
+        } 
+        nav .menu  ul li:hover {
+            background: unset;
+            border-bottom: 2px solid black;
+        } 
+        nav .menu ul li a {
+            padding: unset;
+            line-height: unset;
+        }
+        nav .menu  ul li a:hover {
+            color: unset;
+        } 
+        nav .menu input {
+            display: none;
+        }
+        nav .menu span {
+            display: none;
+        }
+    }
+}
+
+*/
 /*# sourceMappingURL=style.css.map */
